# gen--waf

./: .gitignore  DESCRIPTION.md  LICENSE  Makefile  PREREQUISITES.md  README.md  SECURITY.md  go.mod  go.sum
.github/workflows/: benchmarks.yml  ci.yml
cmd/genagent/: main.go
cmd/genbench/: main.go
cmd/genbench-assert/: main.go
cmd/genbrain/: main.go
cmd/genctl/: main.go
cmd/genedge/: main.go
cmd/genredisdev/: main.go
cmd/sampleweb/: main.go
config/: effective.json  genwaf-cluster.yaml  genwaf-single.yaml
configs/: README.md  genwaf-production.yaml  simulate-under-attack.json
configs/benchmarks/: cluster-redis-native.json  edge-baseline.json  mobile-lossy.json  thresholds.json
configs/profiles/: 01-single-domain-single-backend.yaml  02-single-domain-multi-backend.yaml  03-multi-domain-shared-backend.yaml  04-mixed-host-and-path-routing.yaml  05-multi-node-shared-policy.yaml  06-multi-node-redis-native-benchmark.yaml
configs/templates/: single-node.vps.yaml.tmpl
cpp/: CMakeLists.txt
cpp/include/genwaf/: effective_config.hpp  waf_runtime.hpp
cpp/src/common/: effective_config.cpp  waf_runtime.cpp
cpp/src/gendp/: main.cpp
cpp/src/genxdp_loader/: genwaf_xdp.bpf.c  main.cpp
deploy/systemd/: genwaf-genctl.service  genwaf-gendp.service  genwaf.env.example
docs/: ARCHITECTURE.md  CLOUDFLARE_FLEXIBLE.vi.md  CONFIG_FULL_REFERENCE.vi.md  CONFIG_REFERENCE.md  DEVELOPMENT.md  GRAFANA_DASHBOARD.json  INSTALL_VPS.md  OPERATIONS.md  README.md  SECURITY_ANALYSIS.vi.md
scripts/: benchmark_cluster_redis_native.sh  benchmark_suite.sh  bootstrap-vps.sh  clean-generated.sh  edge_protocol_smoke.sh  http_parser_corpus.sh  install-vps.sh  prepare-vps-host.sh  product_stack_redis_smoke.sh  rebuild-effective.sh  regression.sh  render-production-config.sh  setup-vps.sh  setup_prometheus.sh  smoke-install.sh  start.sh  xdp-manage.sh
(+12 files in other folders)
